# opencv

./: BUILD.bazel  WORKSPACE
bazel/: BUILD.bazel  BUILD.bazel.tpl  configure.bzl
